--- a/questionario/index.html
+++ b/questionario/index.html
@@ -14,10 +14,10 @@
     </div>
 
     <div class="form-section" id="formSection">
-        <h1 id="quizTitle"></h1>
-        <p class="description" id="quizDescription"></p>
-
         <form id="quizForm">
+            <div id="interviewers"></div>
+            <h1 id="quizTitle"></h1>
+            <p class="description" id="quizDescription"></p>
             <div id="questionsContainer"></div>
             <button type="submit" class="submit-btn" id="submitBtn">Calcola il risultato</button>
         </form>
