--- a/questionario/index.html
+++ b/questionario/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div>
-            <button class="restart-btn" onclick="restartQuiz()">Take Quiz Again</button>
+            <button class="restart-btn" onclick="restartQuiz()">Comincia un nuovo quiz</button>
         </div>
     </div>
 </div>
