--- a/questionario/index.html
+++ b/questionario/index.html
@@ -26,46 +26,25 @@
     <div class="loading" id="loadingSection">
         <div class="spinner"></div>
         <p>Saving your answers...</p>
+        <!--    </div>-->
+        <!--        <div>-->
+        <!--            <button class="restart-btn" onclick="restartQuiz()">Invia</button>-->
+        <!--        </div>-->
+        <!--    </div>-->
     </div>
 
-    <div class="result" id="resultSection">
-        Fai parte del gruppo:
-        <div>&nbsp;</div>
-        <h2 id="resultTitle"></h2>
-        <p class="result-description" id="resultDescription"></p>
-
-        <!-- Cartesian Plane -->
-        <div id="cartesianPlane" style="margin: 30px 0;">
-            <svg width="100%" height="400" viewBox="0 0 500 550" style="border: 1px solid #e0e0e0; border-radius: 10px; background: #f8f9ff;">
-                <!-- Grid lines -->
-                <line x1="250" y1="10" x2="250" y2="490" stroke="#ddd" stroke-width="1" stroke-dasharray="5,5"/>
-                <line x1="10" y1="250" x2="500" y2="250" stroke="#ddd" stroke-width="1" stroke-dasharray="5,5"/>
-
-                <!-- Axes -->
-                <line x1="10" y1="250" x2="500" y2="250" stroke="#333" stroke-width="2"/>
-                <line x1="250" y1="40" x2="250" y2="470" stroke="#333" stroke-width="2"/>
-
-                <!-- Axis labels -->
-                <text x="10" y="270" font-size="14" fill="#667eea" font-weight="600">Liberta Individuale</text>
-                <text x="370" y="270" font-size="14" fill="#667eea" font-weight="600">Sacrificio Collettivo</text>
-                <text x="170" y="30" font-size="14" fill="#667eea" font-weight="600">Desiderio di Cambiamento</text>
-                <text x="150" y="490" font-size="14" fill="#667eea" font-weight="600">Soddisfazione dello Status Quo</text>
-
-                <!-- Result point -->
-                <circle id="resultPoint" cx="250" cy="250" r="10" fill="#764ba2" stroke="#667eea" stroke-width="3"/>
-
-                <!-- Crosshair lines for the point -->
-<!--                <line id="verticalLine" x1="250" y1="10" x2="250" y2="490" stroke="#764ba2" stroke-width="1" stroke-dasharray="3,3" opacity="0.5"/>-->
-<!--                <line id="horizontalLine" x1="10" y1="250" x2="500" y2="250" stroke="#764ba2" stroke-width="1" stroke-dasharray="3,3" opacity="0.5"/>-->
-            </svg>
-        </div>
-
-        <div>
-            <button class="restart-btn" onclick="restartQuiz()">Comincia un nuovo quiz</button>
-        </div>
-    </div>
+<div class="result" id="resultSection">
+    Fai parte del gruppo:
+    <div>&nbsp;</div>
+    <h2 id="resultTitle"></h2>
+    <p class="result-description" id="resultDescription"></p>
 </div>
 
+<!--    <div>-->
+<!--        <button class="restart-btn" onclick="restartQuiz()">Comincia un nuovo quiz</button>-->
+<!--    </div>-->
+
+</div>
 <!-- Load as ES6 module -->
 <script type="module" src="js/main.js"></script>
 
