add user selection label

--- a/questionario/index.html
+++ b/questionario/index.html
@@ -16,6 +16,7 @@
     <div class="form-section" id="formSection">
         <form id="quizForm">
             <h1 id="quizTitle"></h1>
+            <div class="interviewers-selection-label">Seleziona il tuo team (puoi digitare il tuo cognome per filtrare)</div>
             <div id="interviewers"></div>
             <p class="description" id="quizDescription"></p>
             <div id="questionsContainer"></div>
